# lidr

./: README.md
alfredo-pretel/estimador-cag/: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
alfredo-pretel/estimador-cag/.streamlit/: secrets.toml.example
alfredo-pretel/estimador-cag/app/: config.py  main.py  schemas.py
alfredo-pretel/estimador-cag/app/context/: examples.py
alfredo-pretel/estimador-cag/app/prompts/: loader.py
alfredo-pretel/estimador-cag/app/prompts/estimation/v1/: examples.j2  system.j2  user.j2
alfredo-pretel/estimador-cag/app/routers/: estimations.py
alfredo-pretel/estimador-cag/app/services/: llm_service.py
alfredo-pretel/estimador-cag/tests/prompts/: test_estimation_v1.py
